# esl_proxy

./: .clang-format  .gitignore  README.md  Todo.md
cmake/: README.md  sources.cmake
cmake/aicore/: CMakeLists.txt
cmake/aicpu/: CMakeLists.txt
cmake/host/: CMakeLists.txt
cmake/onboard/: build_aicore.sh  build_aicpu.sh  build_onboard_host.sh
cmake/onboard/aicore/: CMakeLists.txt
cmake/onboard/aicpu/: CMakeLists.txt
cmake/onboard/host/: CMakeLists.txt
doc/: overview.md  tensor_examples.html  tensormap.md
esl_proxy/: .gitignore  CLAUDE.md  CORE_USAGE.md  Makefile
esl_proxy/.specify/: feature.json
esl_proxy/cases/: build_static_subgraph.h  build_static_tier.h  org.h  paged_attention_unroll.h  paged_attention_unroll_manual_scope.h  qw3_layout.h  qwen3_decode.h  qwen3_decode_static.h  qwen3_decode_tensormap.h  qwen3_decode_tensormap_static.h  qwen3_dynamic_manual_scope.h  qwen3_dynamic_tensormap.h  smoke_orch.h  tensormap_deps.h
esl_proxy/doc/: cache_barrier_audit.md  onboard2_overview.md
esl_proxy/docs/: swimlane.md
esl_proxy/examples/: qwen3_decode.cpp  qwen3_decode_fake_gap_analysis.md
esl_proxy/include/: .clang-format  aicpu_runtime.h  conf.h  cutter.h  dispatch.h  dispatch_payload.h  executor.h  fake_aicore_host.h  fake_kernel.h  log.h  macro_group.h  manager.h  mem_pool.h  mpmc_queue.h  orch_build.h  queue.h  ring_buf.h  swimlane.h  task.h  tensor.h  tensormap.h  tensormap_core.h  worker_map.h
esl_proxy/include/algorithm/: aicore_bridge.h  aicore_executor.h  conf.h  cutter.h  dispatch.h  executor.h  fake_kernel.h  handshake.h  log.h  mpmc_queue.h  queue.h  ring_buf.h  runtime.h  sched_sync.h  spin.h  task.h  tensor.h  tensormap.h  tensormap_core.h
esl_proxy/include/dag/: complete_queue.c  complete_queue.h  fake_orchestration_api.h  mpmc_queue.c  mpmc_queue.h  ready_queue.c  ready_queue.h  ring_buf.c  ring_buf.h
esl_proxy/include/onboard/: aicore.h  aicpu_bridge.h  esl_runtime.h  host_onboard.h  kernel_args.h  onboard_config.h  onboard_crosscore_sync.h  onboard_log.h  onboard_tensor.h  onboard_trace.h  tools.h
esl_proxy/include/platform/: aicore_bridge.h  log.h  platform.h  platform_config.h  platform_regs.h  runtime.h  thread_yield.h  worker_map.h
esl_proxy/include/swimlane/: aicore_profiling_state.h  memory_barrier.h  swimlane_aicore.h  swimlane_aicpu.h  swimlane_collector.h  swimlane_collector_base.h  swimlane_device.h  swimlane_host.h  swimlane_types.h
esl_proxy/log/: pto._thread_0.csv  pto._thread_0.dot  pto._thread_1.csv  pto._thread_1.dot  pto._thread_2.csv  pto._thread_2.dot
esl_proxy/report/dag/: paged_attention_unroll.csv  paged_attention_unroll.dot  qwen3_dynamic_manual_scope.csv  qwen3_dynamic_manual_scope.dot  qwen3_dynamic_tensormap.csv
esl_proxy/specs/001-orchestrator/: spec.md
esl_proxy/specs/003-executor/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
esl_proxy/specs/004-dispatch/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
esl_proxy/specs/006-cutter/: spec.md
esl_proxy/specs/007-memory-pool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
esl_proxy/specs/008-task/: plan.md  spec.md  tasks.md
esl_proxy/specs/009-ring-buffer/: plan.md  spec.md  tasks.md
esl_proxy/specs/010-mpmc-queue/: plan.md  spec.md  tasks.md
esl_proxy/specs/011-prealloc-memory/: plan.md  spec.md
esl_proxy/src/: aicpu_runtime.c  cutter.c  dispatch.c  dispatch_payload.c  executor.c  fake_aicore_host.c  fake_kernel.c  log.c  main.c  manager.c  mem_pool.c  mpmc_queue.c  orch_build.c  shm.c  swimlane.c  worker_map.c
esl_proxy/src/algorithm/: aicore_bridge.c  aicore_executor.c  aicore_handshake.c  aicpu_runtime.c  cutter.c  dispatch.c  dispatch_double_buffer.c  dispatch_payload.c  executor.c  handshake.c  log.c  manager.c  shm.c
esl_proxy/src/onboard/: MERGE_FEASIBILITY.md  ONBOARD_USAGE_ANALYSIS.md  README.md  TOOLS_CALL_GRAPH.md  aicore_kernel.cpp  aicpu_dispatcher.c  aicpu_kernel.c  aicpu_platform.c  host_onboard.c  host_runner.c  onboard_crosscore_sync.c  onboard_log.c  onboard_trace.c  tools.c
esl_proxy/src/swimlane/: host_swimlane.c  host_swimlane.cpp  swimlane_aicpu.c  swimlane_aicpu.cpp
esl_proxy/tests/: cmp_qwen3.c  dump_edges_main.c  run_qwen3_tensormap.c  run_qwen3_tensormap_mt.c  run_qwen3_topology.c  test_qwen3_decode_tensormap.c  test_qwen3_macro_deps.c  test_qwen3_manual_deps.c  test_qwen3_static_deps.c  test_qwen3_tmstatic_deps.c  test_swimlane.c  test_tensormap.c
esl_proxy/tools/: swimlane_converter.py
micro-bench/: atomic_benchmark  atomic_benchmark.c
platform/: README.md
platform/a2a3/aicore/: aicore_executor.cpp  fake_kernel.cpp  kernel.cpp
platform/a2a3/aicpu/: aicore_bridge.c  aicore_bridge.h  aicore_handshake.cpp  aicore_handshake.h  executor.cpp  executor.h  fake_aicore_regs.cpp  fake_aicore_regs.h  kernel.cpp  onboard_shm_sync.c  onboard_shm_sync.h  onboard_sync.h  (+4 more)
platform/a2a3/host/: CMakeLists.txt  aicpu_loader.cpp  aicpu_loader.h  elf_fingerprint.cpp  elf_fingerprint.h  onboard_runner.cpp
platform/cmake/: build_aicore.sh  build_aicpu.sh  build_fake_kernel.sh  build_host_runtime.sh  build_onboard_host.sh
platform/cmake/aicpu/: CMakeLists.txt
platform/include/: esl_kernel_args.h  esl_runtime.h  onboard_config.h
report/: README.md  README_tensor_view_analysis.md  benchmark_report.md  dag.dot  node_buff_sweep.txt  onboard_lock_atomic_and_507018.md  pto2_fake_kernel_plan.md  sim_benchmark.json  tensor_view_2d_analysis.html  tensor_view_functions_detailed_analysis.html
report/micro-bench/: m5_atomic.md
report/proxy/: qwen3_14b.md  qwen3_14b_tensormap.md
scripts/: compare_paged_attention_deps.sh
tools/: compare_paged_attention_deps.sh  gen_all_dags.sh  gen_asm.sh  gen_dag.py  obj_to_gas.py  paged_attention_func_names.json  qwen3_func_names.json  run_onboard.py  run_onboard.sh  run_onboard_gdb.sh  run_onboard_npu.sh  run_onboard_swimlane_cases.sh  run_sim_benchmark.sh  run_swimlane_all_cases.sh  swimlane_perf_summary.py  swimlane_to_perfetto.py  swimlane_trace.py  test_node_buff_size.sh
tools/dep_dump/: dep_dump.c  dep_dump.h
(+120 files in other folders)
